2003-07-25  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-util.c

	Use the default catalog rather than load our own, to avoid path issues

2003-07-24  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-lists-area-listitem.c

	Visual improvements
	
	* cong-fake-plugin-hooks.h, main.c

	Added the paragraph plugin; fixed a memory leak in the VFS buffer loader

	* cong-dispspec.c

	Fixed a memory leak

	* plugin-paragraph-area-paragraph.c, plugin-paragraph-area-paragraph.h, plugin-paragraph-node-element-paragraph.c, plugin-paragraph-node-element-paragraph.h, plugin-paragraph.c, Makefile.am

	New files: plugin paragraph renderer
	
2003-07-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.h, cong-editor-widget3.c, cong-plugin.c, cong-plugin.h, plugin-lists.c

	Added plugin editor nodes to the new editor widget; hooked up the <listitem> plugin.
	
	* cong-debug-log-view.c, cong-dispspec.c, cong-dom-view.c, cong-menus.c, cong-parser-error.c, global.h, main.c, plugin-docbook.c, plugin-dtd.c, plugin-validate.c, xmldata.c

	Finished the refactoring of cong_util code

	* plugin-lists-area-listitem.c, plugin-lists-area-listitem.h, plugin-lists-node-element-listitem.c, plugin-lists-node-element-listitem.h, Makefile.am

	New files: support for a plugin that renders DocBook <listitem> tags

	* cong-util.c, cong-util.h

	New files, taken from parts of main.c and global.h

	* global.h, main.c

	Fixed the Norman Walsh stylesheet lookup to use the XML catalog based upon a patch by Varga Robert

2003-07-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-tree-view.c

	Optimised creation by only creating the GtkTreeView after the store is populated

	* cong-primary-window.c

	More debugging options, including ability to select either/both/no editor widget

	* cong-editor-widget.h, cong-editor-widget3-impl.h, cong-editor-widget3.c

	Made the new editor widget be a genuine subclass of GtkDrawingArea, rather than a hack

	* cong-editor-node-text.c
